test/functions/ferguson/set-const-this.good
set-const-this.chpl:4: In function 'f':
set-const-this.chpl:6: error: cannot assign to const variable
set-const-this.chpl:13: Function 'f' instantiated as: f(this: R(int(64)))
